Fix contrast for links
Update bundle. Fix NavBar Structure

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,11 @@
   color: black;
 }
 
+a,
+a:visited {
+  color: light-dark(blue, #2a7ae2);
+}
+
 .site-footer .black {
   color: light-dark(black, aliceblue);
 }
